# miditron

./: .gitignore  .gitmodules  LICENSE  NOTES.md  README.md
firmware/: .gdbinit  Cargo.toml  Embed.toml  NOTES.md  memory.x  openocd.cfg
firmware/.cargo/: config
firmware/src/: arp.rs  calibrator.rs  clock.rs  destinations.rs  dispatcher.rs  drivers.rs  interrupts.rs  layout.rs  main.rs  midi.rs  multi.rs  resources.rs  router.rs  utils.rs  voices.rs
firmware/src/destinations/: clock_dest.rs  cv_dest.rs  eeprom_dest.rs  gate_dest.rs  led_dest.rs  mod_dest.rs
firmware/src/dispatcher/: calibrator.rs  eeprom_dest.rs  led.rs
firmware/src/drivers/: dac4.rs  dac8.rs  digital_outs.rs  eeprom.rs  gates.rs  leds.rs  midi_input.rs  push_buttons.rs
hardware/: .gitignore  cv_input.kicad_sch  cv_input.sch  dac4.kicad_sch  dac4.sch  dac8.kicad_sch  dac8.sch  fp-info-cache  fp-lib-table  front-only.kicad_pcb  logo.kicad_mod  midi.sch  midi2cv-back-cache.lib  midi2cv-back.kicad_pcb  midi2cv-back.kicad_sch  midi2cv-back.sch  midi2cv-cache.lib  midi2cv-front-cache.lib  midi2cv-front.kicad_pcb  midi2cv-front.sch  midi2cv.kicad_pcb  midi2cv.kicad_pcb-bak  midi2cv.pro  midi2cv.sch  midi2cv.sch-bak  miditron-back-cache.lib  miditron-back-rescue.lib  miditron-back.kicad_pcb  miditron-back.kicad_pro  miditron-back.kicad_sch  miditron-back.sch  miditron-front-cache.lib  miditron-front.kicad_pcb  miditron-front.pro  miditron-front.sch  power_ref.kicad_sch  power_ref.sch  sym-lib-table
hardware/panel/: panel.dxf  (+5 more)
wiki/: hardware_design.md  resources.md  rust_embedded.md  todos.md  wiki.md
(+4 files in other folders)
