[package]
authors = ["Christian Maniewski <code@chmanie.com>"]
edition = "2018"
readme = "README.md"
name = "miditron"
version = "0.1.0"

[package.metadata]
chip = "STM32L452RETx"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x2", "rt"]
version = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "miditron"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
