[package]
authors = ["Christian Maniewski <code@chmanie.com>"]
edition = "2018"
readme = "README.md"
name = "miditron"
version = "0.1.0"

[package.metadata]
chip = "STM32L452RETx"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
heapless = "0.7.0"
dummy-pin = "0.1.1"
embedded-hal = "0.2.5"
embedded-midi = "0.1.1"
dac5578 = "0.1.1"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x2", "rt"]
version = "0.6.0"

[dependencies.dac8564]
git = "https://github.com/chmanie/dac8564"
rev = "42ba22d"

# this lets you use `cargo fix`!
[[bin]]
name = "miditron"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
